# thesis-function-calling

./: .gitignore  .gitmodules  AGENTS.md  FEATURE_SUMMARY.md  README.md  analyze_traces_for_memory.py  cfb_run_eval.py  cfb_run_eval_new.py  config.toml  config_example_selected_tests.toml  dataset_to_langfuse.py  demo_selected_test_cases.py  example.config.toml  example_config.toml  example_response.json  main.py  model_config.toml  pyproject.toml  run_baseline.py  run_cfb.py  run_complexfuncbench.py  run_dummy.py  run_nestful.py
benchmarks/AdapterComplexFuncBench/: model.py  runner.py
benchmarks/complex_func_bench/: orchestrator_runner.py
benchmarks/complex_func_bench/data/: demoComplexFuncBench.jsonl
benchmarks/complex_func_bench/models/: claude.py  gpt.py  legacy_sap_gpt.py  llama.py  mistral.py  sap_gpt.py
benchmarks/complex_func_bench/prompts/: compare.py  response.py
benchmarks/complex_func_bench/runner/: legacy_sap_gpt_runner.py  response_runner.py  sap_gpt_runner.py
benchmarks/dummy_bench/: client.py  tools.py
docs/: fix_ace_playbook_update.md  fix_tool_message_validation.md  implement_ACE.md  llm_orchestrator_refactoring.md  phase1_refactoring_summary.md  refactor_recommendations.md  simplified_orchestrator_injection.md
src/: config.py  llm_orchestrator.py  memory_processing.py
src/prompts/: progressive_summary.md
src/strategies/ace/: __init__.py  (+5 more)
src/utils/: __init__.py  client_factory.py  config.py  history.py  logger.py  memory_decorators.py  split_trace.py  token_count.py  token_counter.py  trace_processing.py
tests/: conftest.py  test_ace_strategy.py  test_config.py  test_dataset_filtering.py  test_history_splitter.py  test_memory_processor.py  test_selected_test_cases.py  test_trace_splitter.py
(+16 files in other folders)
