[project]
name = "thesis-function-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "flagembedding>=1.3.5",
    "jsonlines>=4.0.0",
    "litellm>=1.80.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
