[project]
name = "thesis-function-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.74.1",
    "fastapi[standard]>=0.121.2",
    "flagembedding>=1.3.5",
    "jsonlines>=4.0.0",
    "litellm>=1.80.0",
    "mistralai>=1.9.11",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "pytest>=7.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "streamlit>=1.52.1",
    "tiktoken>=0.5.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "wandb>=0.23.1",
    "weave>=0.52.22",
    "zhipuai>=2.1.5.20250825",
]
